demo route mit drei coolen data ops

--- a/hasbolt-sample-app.cabal
+++ b/hasbolt-sample-app.cabal
@@ -29,6 +29,7 @@ library
                      , text
                      , aeson
                      , containers
+                     , process
   default-language:    Haskell2010
 
 executable hasbolt-sample-app-exe
