--- a/hasbolt-sample-app.cabal
+++ b/hasbolt-sample-app.cabal
@@ -29,7 +29,13 @@ library
                      , text
                      , aeson
                      , containers
-                     , process
+                     , process >= 1.4.3.0
+                     --, zip-archive >= 0.3.0.5
+                     , zip >= 0.1.9
+                     , path >= 0.5.12
+                     , path-io >= 1.2.2
+                     , time >= 1.6.0.1
+                     , bytestring >= 0.10.8.1
   default-language:    Haskell2010
 
 executable hasbolt-sample-app-exe
