--- a/hasbolt-sample-app.cabal
+++ b/hasbolt-sample-app.cabal
@@ -36,6 +36,7 @@ library
                      , path-io >= 1.2.2
                      , time >= 1.6.0.1
                      , bytestring >= 0.10.8.1
+                     , webdriver >= 0.8.4
   default-language:    Haskell2010
 
 executable hasbolt-sample-app-exe
