--- a/hasbolt-sample-app.cabal
+++ b/hasbolt-sample-app.cabal
@@ -37,6 +37,8 @@ library
                      , time >= 1.6.0.1
                      , bytestring >= 0.10.8.1
                      , webdriver >= 0.8.4
+                     , wreq >= 0.5.0.0
+                     , lens >= 4.15.1
   default-language:    Haskell2010
 
 executable hasbolt-sample-app-exe
