--- a/hasbolt-sample-app.cabal
+++ b/hasbolt-sample-app.cabal
@@ -39,6 +39,7 @@ library
                      , webdriver >= 0.8.4
                      , wreq >= 0.5.0.0
                      , lens >= 4.15.1
+                     , regex-tdfa >= 1.2.2
   default-language:    Haskell2010
 
 executable hasbolt-sample-app-exe
