--- a/stack.yaml
+++ b/stack.yaml
@@ -18,7 +18,7 @@
 #resolver: lts-7.12
 
 # 321 meins
-resolver: lts-8.5
+resolver: lts-9.1
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -43,9 +43,9 @@ packages:
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
 extra-deps:
-- hasbolt-0.1.0.2
-- haddock-api-2.17.3.1
-- hdocs-0.5.2.0
+- hasbolt-0.1.1.3
+#- haddock-api-2.18.1
+#- hdocs-0.5.2.1
 
 # Override default flag values for local packages and extra-deps
 flags: {}
